--- a/calculator/operations/templates/home.html
+++ b/calculator/operations/templates/home.html
@@ -19,5 +19,10 @@
     <div><a href="{%url 'palindrome'%}">Palindrome</a></div>
     <div><a href="{%url 'evennumber'%}">Even number</a></div>
     <div><a href="{%url 'healthy'%}">Healthy</a></div>
+    <div><a href="{%url 'temprature'%}">Temprature</a></div>
+    <div><a href="{%url 'exponent'%}">Exponent</a></div>
+    <div><a href="{%url 'login'%}">Login</a></div>
+    <div><a href="{%url 'registration'%}">Registration</a></div>
+    <div><a href="{%url 'geo'%}">Geo</a></div>
 </body>
 </html>
