--- a/cakeBox/myapp/templates/cakebox-add.html
+++ b/cakeBox/myapp/templates/cakebox-add.html
@@ -4,22 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css" integrity="sha512-L+sMmtHht2t5phORf0xXFdTC0rSlML1XcraLTrABli/0MMMylsJi3XA23ReVQkZ7jLkOEIMicWGItyK4CAt2Xw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/fontawesome.min.css" integrity="sha512-cHxvm20nkjOUySu7jdwiUxgGy11vuVPE9YeK89geLMLMMEOcKFyS2i+8wo0FOwyQO/bL8Bvq1KMsqK4bbOsPnA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="cakebox-add.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Add your cake to CakeBox <i class="fa-solid fa-cake-candles fa-shake" style="color: #d54f15;"></i></h1>
-    <form action="" method="post">
+    <div class="container">
+        {%for message in messages%}
+        <div class="alert alert-dark alert-dismissible fade show" role="alert">
+            <strong>{{message}}</strong> 
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          {%endfor%}
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <h1 class="mt-3">Add your cake to CakeBox <i class="fa-solid fa-cake-candles fa-shake" style="color: #4e88db;"></i></h1>
+    <form action="" method="post" class="mt-4" enctype="multipart/form-data">
         {%csrf_token%}
         {{form.as_p}}
-    <input type="submit" value="Add">
+    <input type="submit" value="Add" class="form-control btn btn-outline-info mb-5">
     </form>
-    {{cake.name}}
-    {{cake.flavour}}
-    {{cake.price}}
-    {{cake.shape}}
-    {{cake.layer}}
+    </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
 </body>
 </html>
