--- a/cakeBox/myapp/templates/cakebox-list.html
+++ b/cakeBox/myapp/templates/cakebox-list.html
@@ -9,12 +9,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css" integrity="sha512-L+sMmtHht2t5phORf0xXFdTC0rSlML1XcraLTrABli/0MMMylsJi3XA23ReVQkZ7jLkOEIMicWGItyK4CAt2Xw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/fontawesome.min.css" integrity="sha512-cHxvm20nkjOUySu7jdwiUxgGy11vuVPE9YeK89geLMLMMEOcKFyS2i+8wo0FOwyQO/bL8Bvq1KMsqK4bbOsPnA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/solid.min.css" integrity="sha512-bdTSJB23zykBjGDvyuZUrLhHD0Rfre0jxTd0/jpTbV7sZL8DCth/88aHX0bq2RV8HK3zx5Qj6r2rRU/Otsjk+g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <h1>cakebox&nbsp;<i class="fa-solid fa-cake-candles"></i></h1>
-        <caption class="text-center">List of Cakes</caption>
+        {%for message in messages%}
+        <div class="alert alert-dark alert-dismissible fade show" role="alert">
+            <strong>{{message}}</strong> 
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          {%endfor%}
+        <h1 class="mt-3">Cakebox&nbsp;<i class="fa-solid fa-cake-candles"></i></h1>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <a href="{%url 'cakebox-add'%}" class="btn btn-outline-warning mb-1">Add your cake</a>
+        </div>
+        <caption class="text-info">List of Cakes</caption>
         <table class="table table-striped">
             <tr>
                 <th>ID</th>
@@ -26,6 +36,7 @@
                 <th>Layer</th>
                 <th>Description</th>
                 <th>Date</th>
+                <th>Image</th>
                 <th>Action</th>
             </tr>
             {%for t in cakes%}
@@ -40,8 +51,15 @@
                 <td>{{t.descriptions}}</td>
                 <td>{{t.date}}</td>
                 <td>
-                    <a href="{%url 'cakebox-remove' t.id%}" class="btn btn-outline-danger mb-1">Delete</a>
-                    <a href="{%url 'cakebox-detail' t.id%}" class="btn btn-outline-info mb-1">Details</a>
+                    {%if t.photo%}
+                    <img src="{{t.photo.url}}" alt="" width="100%" height="100rem">
+                    {%endif%}
+                </td>
+                <td>
+                    
+                    <a href="{%url 'cakebox-detail' t.id%}" class="btn btn-outline-success form-control mb-1">Details</a>
+                    <a href="{%url 'cakebox-edit' t.id%}" class="btn btn-outline-success form-control mb-1">Edit</a>
+                    <a href="{%url 'cakebox-remove' t.id%}" class="btn btn-outline-success form-control mb-1">Delete</a>
                 </td>
             </tr>
             {%endfor%}
